--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@
             <h3 class="my-4"><b>Planta Da Índia Antiga Derrete Muita Gordura</b></h3>
 
             <!-- VSL -->
-            <script type="text/javascript" id="scr_62355aa496ef4b00092625b1">var s=document.createElement("script");s.src="https://cdn.converteai.net/46b46487-c36b-44b4-8758-76b7071d36a1/players/62355aa496ef4b00092625b1/player.js",s.async=!0,document.head.appendChild(s);</script>
+            <script type="text/javascript" id="scr_6238f5ef34cf0a000e72b7d4">var s=document.createElement("script");s.src="https://cdn.converteai.net/46b46487-c36b-44b4-8758-76b7071d36a1/players/6238f5ef34cf0a000e72b7d4/player.js",s.async=!0,document.head.appendChild(s);</script>
 
             <!-- Botão -->
             <div id="cta1" class="mt-4 d-none">
-              <a href="https://pay.kiwify.com.br/abQRsLm" class="a-btn" style="text-decoration: none;">
+              <a href="https://pay.kiwify.com.br/rrycBN6" class="a-btn" style="text-decoration: none;">
                 <span class="span-btn">QUERO OBTER ACESSO!</span>
                 <span class="span-btn2">(atenção: vagas limitadas)</span>
               </a>
