--- a/quiz/index.html
+++ b/quiz/index.html
@@ -102,7 +102,7 @@ src="https://www.facebook.com/tr?id=476755460797604&ev=AddToCart&noscript=1"
 <div id="primeira">
 <div class="question">
 <h1>Pergunta 1</h1>
-<p>Você realmente quer descobrir esse segredo?</p>
+<p>Você realmente quer saber mais sobre essa enzima?</p>
 </div>
 <div class="answer">
 <button class="btn" onclick="segunda()">SIM</button>
