--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ src="https://www.facebook.com/tr?id=476755460797604&ev=PageView&noscript=1"
 
             <!-- Botão 1 -->
             <div id="cta1" class="mt-4 d-none">
-              <a href="https://pay.kiwify.com.br/rrycBN6" class="a-btn" style="text-decoration: none;">
+              <a href="https://pay.kiwify.com.br/2GoneOX" class="a-btn" style="text-decoration: none;">
                 <span class="span-btn">QUERO OBTER ACESSO!</span>
                 <span class="span-btn2">(atenção: vagas limitadas)</span>
               </a>
@@ -440,7 +440,7 @@ src="https://www.facebook.com/tr?id=476755460797604&ev=PageView&noscript=1"
             </div>
             <!-- Botão 2 -->
             <div id="cta2" class="mt-4 d-none">
-              <a href="https://pay.kiwify.com.br/rrycBN6" class="a-btn" style="text-decoration: none;">
+              <a href="https://pay.kiwify.com.br/2GoneOX" class="a-btn" style="text-decoration: none;">
                 <span class="span-btn">QUERO OBTER ACESSO!</span>
                 <span class="span-btn2">(atenção: vagas limitadas)</span>
               </a>
