--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ src="https://www.facebook.com/tr?id=476755460797604&ev=PageView&noscript=1"
             <h3 class="my-4"><b>Enzima encontrada em Planta Indiana Derrete 10Kg em 30 Dias</b></h3>
 
             <!-- VSL -->
-            <script type="text/javascript" id="scr_625f1eaa786bbb0008eeb924">var s=document.createElement("script");s.src="https://cdn.converteai.net/4635e247-e7ad-444c-bf75-524882783a6f/players/625f1eaa786bbb0008eeb924/player.js",s.async=!0,document.head.appendChild(s);</script>
+            <script type="text/javascript" id="scr_626f42ba5045c3000aeb4c21">var s=document.createElement("script");s.src="https://scripts.converteai.net/4635e247-e7ad-444c-bf75-524882783a6f/players/626f42ba5045c3000aeb4c21/player.js",s.async=!0,document.head.appendChild(s);</script>
 
             <!-- Botão 1 -->
             <div id="cta1" class="mt-4 d-none">
