--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   src="https://www.facebook.com/tr?id=738735194029568&ev=PageView&noscript=1"
 /></noscript>
 <!-- End Meta Pixel Code -->
-    
+    <meta name="facebook-domain-verification" content="tqxpzfoo0w5mdo98ynfo5z393xsein" />
   </head>
   <body>
     
